apps/landing-page/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  namespace: landing-page
spec:
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: nginx
        ports:
        - containerPort: 80
