apps/landing-page/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  namespace: landing-page
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
